app.yaml
---
# service
apiVersion: v1
kind: Service
metadata:
  name: docmost-app
  namespace: docmost
  labels:
    app: docmost-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: docmost-app
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost-app
  namespace: docmost
spec:
  replicas: 2
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: docmost-app
  template:
    metadata:
      labels:
        app: docmost-app
    spec:
      serviceAccountName: docmost-app
      terminationGracePeriodSeconds: 130
      containers:
        - name: docmost-app
          image: "docmost/docmost:0.20.4"
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "30s"]
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /api/health/live
              port: http

          readinessProbe:
            initialDelaySeconds: 10
            failureThreshold: 10
            httpGet:
              path: /api/health/live
              port: http

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docmost-app
  namespace: docmost
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`YOUR_DOMAIN.com`)
      priority: 1
      kind: Rule
      services:
        - name: docmost-app
          port: 3000
